<resources>
    <string name="app_name">Self Order</string>
    <string name="quanity">Quanity</string>
    <string name="half">Half</string>
    <string name="full">Full</string>
    <string name="types">Types</string>
    <string name="preference_file_key">SelfOrder</string>
    <string name="facebook_app_id">116124135725397</string>
    <string name="fb_login_protocol_scheme">fb116124135725397</string>
    <string name="font_name_roboto_regular">fonts/roboto_regular.ttf</string>
    <string name="font_name_roboto_bold">fonts/roboto_bold.ttf</string>
    <string name="font_name_roboto_regular_">roboto_regular.ttf</string>
    <string name="font_name_roboto_bold_">roboto_bold.ttf</string>
    <string name="font_name_roboto_light">fonts/roboto_light.ttf</string>
    <string name="font_name_roboto_light_">roboto_light.ttf</string>
    <string name="font_name_roboto_medium">fonts/roboto_medium.ttf</string>
    <string name="font_name_roboto_medium_">roboto_medium.ttf</string>
    <string name="baseURL">http://18.188.253.46/webRestaurant/api/</string>
    <string name="user_authenticate">resto/user_authenticate</string>
    <string name="validateQRCode">resto/validateQRCode</string>
    <string name="getMenuListByType">resto/getMenuListByType</string>
    <string name="addCart">Resto/addCart</string>
    <string name="removeCart">Resto/removeCart</string>
    <string name="cancelOrder_">Resto/orderCancel</string>
    <string name="getCartList">Resto/getCartList</string>
    <string name="sendUserOTP">Resto/sendUserOTP</string>
    <string name="verifyotp">Resto/verifyOTP</string>
    <string name="placeOrder_">Resto/placeOrder</string>
    <string name="makePayment">Resto/makePayment</string>
    <string name="getCategories">resto/getCategories</string>
    <string name="getOrderDetails">Resto/getOrderDetails</string>
    <string name="placeOrder">placeOrder.php</string>
    <string name="getMastervalues">getMastervalues.php</string>
    <string name="getOrderListByCustomer">getOrderListByCustomer.php</string>
    <string name="cancelOrder">cancelOrder.php</string>
    <string name="getCartItems">getCartItems.php</string>
    <string name="database_unique_id">database_unique_id</string>
    <string name="database_user_id">database_user_id</string>
    <string name="database_menu_id">database_menu_id</string>
    <string name="database_menu_name">database_menu_name</string>
    <string name="database_menu_price">database_menu_price</string>
    <string name="database_menu_image">database_menu_image</string>
    <string name="database_menu_quantity">database_menu_quantity</string>
    <string name="database_menu_amount">database_menu_amount</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="all_tab">All</string>
    <string name="cafe_tab">Cafe</string>
    <string name="londge">Londge</string>
    <string name="emailid">Email Id</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember me</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="button_login">Login</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="button_signup">Sign Up</string>
    <string name="i_agree_to_terms_and_conditions">I agree to Terms and Conditions</string>
    <string name="name">Name</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ </string>
    <string name="forgot_password_message">Password will send on registered email id. Please login using new password.</string>
    <string name="button_submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="flipq_credits">FlipQ Credits</string>
    <string name="favorite_order">Favorite Order</string>
    <string name="address_book">Address Book</string>
    <string name="your_booking">Your Bookings</string>
    <string name="find_friend_on_flipq">Find Friend on FlipQ</string>
    <string name="invite_friend_on_flipq">Invite Friend on FlipQ</string>
    <string name="add_place">Add Place</string>
    <string name="about">About</string>
    <string name="signout">Signout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toast_exit">Please press BACK again to exit</string>
    <string name="error_invalid_email_id">Please enter valid email id</string>
    <string name="error_email_id">Please enter email id</string>
    <string name="internet_connection">Please check your internet connection</string>
    <string name="timeout_error">Oops!!! Timeout...</string>
    <string name="error_something_went_wrong">Something went wrong. Please try again....</string>
    <string name="please_wait">Please wait...</string>
    <string name="button_create_account">Create Account</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="or">OR</string>
    <string name="button_connect_with_facebook">Connect with Facebook</string>
    <string name="button_connect_with_google">Connect with Google</string>
    <string name="skip">Skip</string>
    <string name="error_name">Please enter name</string>
    <string name="error_password">Please enter password</string>
    <string name="error_otp">OTP can not be blank..!</string>
    <string name="error_password_lenght">Password length must be equal or greater than 6 characters</string>
    <string name="open_now">Open Now</string>
    <string name="error_terms">Please accept terms and conditions</string>
    <string name="mobileno">Mobile number</string>
    <string name="mobile_number_">mobile_number</string>
    <string name="mobile_number1">Mobile number</string>
    <string name="error_mobileno">Please enter mobile number</string>
    <string name="error_mobile_length">Mobile number must be 10 digits</string>
    <string name="button_book_now">Book Now</string>
    <string name="order_online">Order Online</string>
    <string name="book_a_table">Book a Table</string>
    <string name="tab_cuisines">CUISINES</string>
    <string name="tab_reviews">REVIEWS</string>
    <string name="tab_photos">PHOTOS</string>
    <string name="more_info">MORE INFO</string>
    <string name="type">TYPE</string>
    <string name="popular_for">POPULAR FOR</string>
    <string name="average_cost">AVERAGE COST</string>
    <string name="all_cards_are_accepted">All cards are accepted</string>
    <string name="address">ADDRESS</string>
    <string name="get_map">Get Map > </string>
    <string name="menu">MENU</string>
    <string name="add_review"> &lt; Add Review </string>
    <string name="see_all_reviews">See All Reviews &gt;  </string>
    <string name="hint_name">Name*</string>
    <string name="hint_name_">NAME</string>
    <string name="hint_date">Date*</string>
    <string name="hint_date_">DATE</string>
    <string name="hint_time">Time*</string>
    <string name="hint_time_">TIME</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="phone">PHONE</string>
    <string name="hint_no_of_male">No of Male*</string>
    <string name="hint_no_of_male_">No of Male</string>
    <string name="hint_no_of_female">No of Female*</string>
    <string name="hint_no_of_female_">No of Female</string>
    <string name="people">PEOPLE*</string>
    <string name="people_">PEOPLE</string>
    <string name="leave_a_message">Leave message for restaurant</string>
    <string name="button_send_booking_request">Send Booking Request</string>
    <string name="hint_link_mobile">Link phone number with your account</string>
    <string name="send_you_code">We will send you a code via SMS to verify this number</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="tab_upcoming">UPCOMING</string>
    <string name="tab_history">HISTORY</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="pending">PENDING CONFIRMATION</string>
    <string name="canceled">CANCELED</string>
    <string name="booking_status">BOOKING STATUS</string>
    <string name="otp_message">We have sent 4 digit verification code on +919898989898 via SMS. Please enter it below and you are done.</string>
    <string name="booking_status_message">We have received your request. We will contact the restaurant during opening hours and get back to you as soon as your booking is confirmed.</string>
    <string name="booking_status_update_message">Visit this screen at any time to view the current statsu of your booking. You can find it under \'Your Booking\' in main menu.</string>
    <string name="booking_date_time">BOOKING DATE &amp; TIME</string>
    <string name="modify_booking">Modify Booking</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="modify_booking_dialog_message">Are you sure you want to modify this booking ?</string>
    <string name="button_yes">YES</string>
    <string name="button_no">NO</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_last_used_customization">Repeat last used customization ?</string>
    <string name="quantity">Quantity: </string>
    <string name="menu_name">Menu Name</string>
    <string name="add_new">Add new</string>
    <string name="repeat">Repeat</string>
    <string name="show_selected_qty_here">Show selected qty here</string>
</resources>