<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/grey_E3E3E3">

                <TextView
                    android:id="@+id/textview_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/cancel"
                    android:textColor="@color/grey_909090"
                    android:textSize="14sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:padding="20dp"
                android:orientation="vertical">

                <com.nsquare.restaurant.util.RobotoMedium.TextViewRoboto
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:padding="2dp"
                    android:text="@string/menu_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <com.nsquare.restaurant.util.RobotoMedium.TextViewRoboto
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:padding="2dp"
                    android:text="@string/repeat_last_used_customization"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="2dp">

                    <com.nsquare.restaurant.util.RobotoMedium.TextViewRoboto
                        android:id="@+id/quantity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/grey_title"
                        android:textSize="12sp" />

                    <com.nsquare.restaurant.util.RobotoMedium.TextViewRoboto
                        android:id="@+id/textview_qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/quantity_label"
                        android:text="@string/show_selected_qty_here"
                        android:textColor="@color/grey_title"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button_add_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/add_new" />

                    <Button
                        android:id="@+id/button_repeat_last"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_toRightOf="@+id/button_add_new"
                        android:text="@string/repeat" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>