<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:id="@+id/activity_forgot_password_textinputlayout_emailid">

            <EditText
                android:id="@+id/activity_forgot_password_edittext_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailid"
                android:textSize="15dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:background="@drawable/edit_text_inactive"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_message"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/activity_forgot_password_button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="@drawable/selector_button_login"
            android:layout_marginTop="25dp"/>
    </LinearLayout>


</LinearLayout>